// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Minting Macaroons m 1`] = `
"location ncrafts.io
identifier it's a me, Julien!
signature 33241e6038895a6dee3b840cd800c9c1f209b620ae3e972a0d674f487179a54f
"
`;

exports[`Minting Macaroons m2 has two caveats 1`] = `
"location ncrafts.io
identifier it's a me, Julien!
cid talk = macaroons-hands-on
cid time < 2017-05-18T14:45+02:00
signature 77f27c4442cc89e99cfaf966c32b3d168392366a977d4fb3464a3894ca411c9b
"
`;
